...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.meeting_creation.MeetingCreationFragment">

            <!-- text input to enter the subject -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meeting_registration_subject_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_2x"
                android:hint="@string/subject"
                app:helperText="required">
...
                    android:maxLength="35" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- text input to enter the place -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meeting_registration_place_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_meeting_registration_subject_text_input"
                android:layout_margin="@dimen/size_2x"
                android:hint="@string/place"
...
