<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Simple menu item (save btn) -->
    <item
        android:id="@+id/meeting_creation_dialog_toolbar_save_item"
        android:title="@string/add_persons_save"
        app:showAsAction="ifRoom" />
</menu>